--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "An envelope budgeting API",
   "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "cross-env PORT=8000 mocha --watch",
+    "start-dev": "webpack -w & nodemon --watch server.js --watch server/",
+    "start": "nodemon --watch server.js --watch server/"
   },
   "author": "andrew indeche",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
-    "chai": "^5.1.2",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "express": "^4.21.1",
-    "mocha": "^10.8.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.7",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2", 
+    "cross-env": "^7.0.3", 
+    "mocha": "^10.8.2", 
+    "nodemon": "^3.1.7", 
     "supertest": "^7.0.0"
   }
 }
