--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "chai": "^5.1.2", 
-    "cross-env": "^7.0.3", 
-    "mocha": "^10.8.2", 
-    "nodemon": "^3.1.7", 
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
+    "mocha": "^10.8.2",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
